--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "electron-main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+   "start": "NODE_OPTIONS=--openssl-legacy-provider ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
